--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -9,7 +9,7 @@
 				 Mass Mailing 
 			 </a>
 	 	    <a href="#" class="current">
-				Drafts/Stationery/Schedules
+				All Drafts/Stationery/Schedules
 			</a>
 		</nav>
 	</div>
