This is the feature, basically - probably some cleanup on the, "View List" (and friends) to show/hide the Ignore Bounces tab in various situations.

--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -121,7 +121,7 @@
 
 <!-- tmpl_include add_email_import_subcribers_disabled.tmpl -->
 
-<!-- tmpl_include list_type_switch_widget.tmpl -->
+<!-- tmpl_include view_list_type_switch_widget.tmpl -->
 	
 <!-- tmpl_if list_is_closed -->
 
