--- a/dada/templates/delete_email_screen.tmpl
+++ b/dada/templates/delete_email_screen.tmpl
@@ -25,7 +25,7 @@
 	</div>
 </div>
 
-<!-- tmpl_include list_type_switch_widget.tmpl -->
+<!-- tmpl_include view_list_type_switch_widget.tmpl -->
 
 <!-- tmpl_if GLOBAL_UNSUBSCRIBE -->
 	
