Drafts can now be turned into Stationery after they're sent out!

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -466,21 +466,20 @@ $ADMIN_MENU = [
 	{-Title      => 'Mass Mailing',
 	 -Activated  => 1,
 	 -Submenu    => [
-	 
 					{
-					-Title     => 'Drafts/Stationery/Schedules',
+					-Title     => 'All Drafts/Stationery/Schedules',
 					-Title_URL => "$S_PROGRAM_URL?flavor=drafts",
 					-Function  => 'drafts',
 					-Activated => 1,
 					},
-	 
+				
 					{ 
-					-Title      => 'Send a Message',
-					-Title_URL  => "$S_PROGRAM_URL?flavor=send_email",
+					-Title      => '+ New Draft Message',
+					-Title_URL  => "$S_PROGRAM_URL?flavor=send_email&restore_from_draft=false",
 					-Function   => 'send_email',
 					-Activated  => 1,
 					},
-					
+
 					{
 					-Title      => 'Monitor',
 					-Title_URL  => "$S_PROGRAM_URL?flavor=sending_monitor",
