Small copy change.

--- a/dada/templates/send_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_email_html_message_form_field_widget.tmpl
@@ -12,7 +12,7 @@
 			checked="checked"
 		>
 		<label for="content_from_textarea">
-			Write/Paste HTML
+			Write/Paste in Content
 		</label>
 	</div>
 </div>
