--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -38,7 +38,7 @@
 			</label>
 		</div>				  				
 		<div class="large-11 columns">	
-			<input type="text" name="Subject" id="Subject" value="<!-- tmpl_var Subject escape="HTML"  -->"  >
+			<input type="text" name="Subject" id="Subject" value="<!-- tmpl_var default_subject escape="HTML"  -->"  >
 		</div>
 	</div>
 
