--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -468,14 +468,14 @@ $ADMIN_MENU = [
 	 -Submenu    => [
 					{
 					-Title     => 'All Drafts/Stationery/Schedules',
-					-Title_URL => "$S_PROGRAM_URL?flavor=drafts",
+					-Title_URL => "$S_PROGRAM_URL?flavor=drafts&draft_role=draft",
 					-Function  => 'drafts',
 					-Activated => 1,
 					},
 				
 					{ 
 					-Title      => '+ New Draft Message',
-					-Title_URL  => "$S_PROGRAM_URL?flavor=send_email&restore_from_draft=false",
+					-Title_URL  => "$S_PROGRAM_URL?flavor=send_email",
 					-Function   => 'send_email',
 					-Activated  => 1,
 					},
