--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -70,7 +70,7 @@
 				<ul class="button-group right">
 				    <li>
 						<a 
-							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=false"
+							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=draft"
 							class="small button"
 						>
 							<i class="fi-plus"></i> New Draft
@@ -132,7 +132,7 @@
 
         			<td>
         				<p>
-    						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->">
+    						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=draft&draft_id=<!-- tmpl_var id -->">
     							<!-- tmpl_if Subject -->
 									<!-- tmpl_var Subject escape="HTML" -->
     							<!-- tmpl_else -->
@@ -144,7 +144,7 @@
 					
 					<td>
 						<p>
-							<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->">
+							<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=draft&draft_id=<!-- tmpl_var id -->">
 								<!-- tmpl_var created_timestamp --> 
 							</a>
 						</p> 
@@ -152,7 +152,7 @@
 					
         			<td>
         				<p>
-        					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->">
+        					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=draft&draft_id=<!-- tmpl_var id -->">
         						<!-- tmpl_var last_modified_timestamp --> 
         					</a>
         				</p> 
@@ -165,7 +165,7 @@
 					
         			<td>
 						<a 
-							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->" class="small button success"
+							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=draft&draft_id=<!-- tmpl_var id -->" class="small button success"
 							class="small button success"
 						> 
 							<i class="fi-page-edit"></i> Edit
@@ -200,7 +200,7 @@
 				<br>
 				<br>	
 					<a 
-						href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=false"
+						href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=draft"
 						class="large button expand"
 					>
 						<i class="fi-plus"></i> New Draft
@@ -214,7 +214,7 @@
 				<ul class="button-group right">
 				    <li>
 						<a 
-							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=false"
+							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=draft"
 							class="small button"
 						>
 							<i class="fi-plus"></i> New Draft
@@ -311,7 +311,7 @@
                     </td>
         			<td>
         				<p>
-    						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_role=stationery&draft_id=<!-- tmpl_var id -->" >
+    						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=stationery&draft_id=<!-- tmpl_var id -->" >
     							<!-- tmpl_if Subject -->
 									<!-- tmpl_var Subject escape="HTML" -->
     							<!-- tmpl_else -->
@@ -323,7 +323,7 @@
 					
 					<td>
 						<p>
-							<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_role=stationery&draft_id=<!-- tmpl_var id -->">
+							<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=stationery&draft_id=<!-- tmpl_var id -->">
 								<!-- tmpl_var created_timestamp --> 
 							</a>
 						</p> 
@@ -332,7 +332,7 @@
 					
         			<td>
         				<p>
-        					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_role=stationery&draft_id=<!-- tmpl_var id -->">
+        					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=stationery&draft_id=<!-- tmpl_var id -->">
         						<!-- tmpl_var last_modified_timestamp --> 
         					</a>
         				</p> 
@@ -346,7 +346,7 @@
 					
                     <td>
                     	<a 
-							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_role=stationery&draft_id=<!-- tmpl_var id -->"
+							href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=stationery&draft_id=<!-- tmpl_var id -->"
 							class="small button success"
 						>
 							<i class="fi-page-edit"></i> Edit
@@ -455,7 +455,7 @@
 
                 			<td>
                 				<p>
-            						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
+            						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
 		    							<!-- tmpl_if Subject -->
 											<!-- tmpl_var Subject escape="HTML" -->
 		    							<!-- tmpl_else -->
@@ -467,7 +467,7 @@
 							
                 			<td>
 								<p>
-            						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule">									
+            						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule">									
 		                                <!-- tmpl_if expr="(schedule_type eq 'single')" --> 
 		        						    <!-- tmpl_var schedule_single_displaydatetime -->
 		        						<!-- tmpl_else --> 
@@ -480,7 +480,7 @@
 							
 							<td>
 								<p>
-									<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_role=schedule&draft_id=<!-- tmpl_var id -->">
+									<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_role=schedule&draft_id=<!-- tmpl_var id -->">
 										<!-- tmpl_var created_timestamp --> 
 									</a>
 								</p> 
@@ -490,7 +490,7 @@
 							
                 			<td>
                 				<p>
-                					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
+                					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
                 						<!-- tmpl_var last_modified_timestamp --> 
                 					</a>
                 				</p> 
@@ -511,7 +511,7 @@
 						
                             <td>
 								<a 
-								href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule" 
+								href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule" 
 								class="small button success" 
 								>
 									<i class="fi-page-edit"></i> Edit
@@ -603,7 +603,7 @@
                     			
                     			<td>
                     				<p>
-                						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
+                						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
 			    							<!-- tmpl_if Subject -->
 												<!-- tmpl_var Subject escape="HTML" -->
 			    							<!-- tmpl_else -->
@@ -614,7 +614,7 @@
                     			</td>
 								
                     			<td>
-            						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule">									
+            						<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule">									
                                         <!-- tmpl_if expr="(schedule_type eq 'single')" --> 
                 						    <!-- tmpl_var schedule_single_displaydatetime -->
                 						<!-- tmpl_else --> 
@@ -626,7 +626,7 @@
 								
                     			<td>
                     				<p>
-                    					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
+                    					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
                     						<!-- tmpl_var created_timestamp --> 
                     					</a>
                     				</p> 
@@ -635,7 +635,7 @@
     
                     			<td>
                     				<p>
-                    					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
+                    					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule">
                     						<!-- tmpl_var last_modified_timestamp --> 
                     					</a>
                     				</p> 
@@ -656,7 +656,7 @@
 								
                                 <td>
 									<a
-										href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&restore_from_draft=true&draft_id=<!-- tmpl_var id -->&draft_role=schedule"
+										href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=send_email&draft_id=<!-- tmpl_var id -->&draft_role=schedule"
 										class="small button success"
 									>
 										<i class="fi-page-edit"></i> Edit
